<resources>
    <string name="app_name">TicTacToe</string>
    <string name="jogador">Player:</string>
    <string name="cpu">CPU:</string>
    <string name="title_activity_opcoes">Options</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_lista_dificuldades">
        <item>Easy</item>
        <item>Hard</item>
        <item>Very Hard/Impossible</item>
    </string-array>
    <string-array name="pref_valores_lista_dificuldades">
        <item>1</item>
        <item>2</item>
        <item>-3</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="dificuldade">Difficulty</string>
    <string name="pref_desc_ordem_jogar">Player Plays First</string>
    <string name="pref_titulo_ordem_jogar">Playing order</string>
    <string name="multiPlayer1">Player1:</string>
    <string name="multiPlayer2">Player2:</string>
    <string name="player1Win">Player 1 Won!</string>
    <string name="player2Win">You Won! Congratulations!</string>
    <string name="cpuWin">\"CPU Won. Try again! \"</string>
    <string name="playerWin">Player 2 Won!</string>
    <string name="draw">It\'s a draw.</string>
    <string name="twoPlayersSummary">Two Players </string>
    <string name="twoPlayersTitle">Two Players</string>
    <string name="soundSummary">Sound On</string>
    <string name="soundTitle">Sound</string>
    <string name="palyer">Player:</string>
    <string name="rateTitle">Rate this app</string>
    <string name="rateContent">Has this app convinced you? We would be very happy if you could rate our application on Google Play. Thanks for your support!</string>
    <string name="rateNow">Rate now</string>
    <string name="later">Later</string>
    <string name="never">No, thanks</string>
    <string name="select_game_mode">Game Mode</string>
    <string name="single_player">Single Player</string>
    <string name="multiplayer">Multiplayer</string>
    <string name="easy">Easy</string>
    <string name="hard">Hard</string>
    <string name="impossible">Insane</string>
    <string name="select_difficulty">Difficulty</string>
    <string name="tictactoe">Tic Tac Toe</string>
    <string name="the_impossible">Impossible</string>
    <string name="hardLevelAchivement">Hard Level Unlocked</string>
    <string name="insaneLevelAchivement">Insane Level Unlocked</string>
</resources>
