<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_select_dificulty"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.trimteam.tictactoe.SelectDificultyActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/select_difficulty"
        android:textSize="@android:dimen/app_icon_size"
        android:id="@+id/text_select_difficulty"
        android:layout_marginBottom="64dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"/>

    <Button
        android:text="@string/easy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/activity_vertical_margin"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:layout_below="@+id/text_select_difficulty"
        android:id="@+id/button_easy" />

    <Button
        android:text="@string/hard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/activity_vertical_margin"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:id="@+id/button_hard"
        android:layout_below="@+id/button_easy" />

    <Button
        android:text="@string/impossible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/activity_vertical_margin"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:id="@+id/button_impossible"
        android:layout_below="@+id/button_hard" />

</RelativeLayout>
