<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_select_dificulty"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.trimteam.tictactoe.SelectDifficultyActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:fontFamily="monospace"
        android:gravity="center"
        android:text="@string/select_difficulty"
        android:textSize="48sp"
        android:id="@+id/text_select_difficulty"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:textColor="@android:color/holo_orange_light"
        android:layout_weight="2"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="36dp"
        android:layout_weight="1"
        android:gravity="center">

        <Button
            android:text="@string/easy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:id="@+id/button_easy"
            android:textSize="18sp"
            android:padding="24dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/button_border"/>

        <Button
            android:text="@string/hard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:id="@+id/button_hard"
            android:textSize="18sp"
            android:padding="24dp"
            android:background="@drawable/button_border"
            android:layout_marginBottom="16dp"
            android:enabled="false"/>

        <Button
            android:text="@string/impossible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:id="@+id/button_impossible"
            android:background="@drawable/button_border"
            android:padding="24dp"
            android:layout_marginBottom="16dp"
            android:enabled="false"/>

        <Button
            android:text="@string/the_impossible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:id="@+id/button_the_impossible"
            android:background="@drawable/button_border"
            android:padding="24dp"
            android:enabled="false"/>
    </LinearLayout>

</LinearLayout>
