<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_select_game_mode"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.trimteam.tictactoe.SelectGameModeActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/select_game_mode"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:textAllCaps="true"
        android:fontFamily="monospace"
        android:textSize="@android:dimen/app_icon_size"
        android:id="@+id/text_select_game_mode"
        android:layout_marginBottom="64dp"
        android:layout_marginTop="16dp"/>

    <Button
        android:text="@string/single_player"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/activity_vertical_margin"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:layout_below="@+id/text_select_game_mode"
        android:id="@+id/button_single_player" />

    <Button
        android:text="@string/multiplayer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/activity_vertical_margin"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:id="@+id/button_multiplayer"
        android:layout_below="@+id/button_single_player" />
</RelativeLayout>
